@@ -1,3 +1,8 @@
+2007-02-15  Abel Cheung  <abelcheung@gmail.com>
+
+	* class.*.inc.php: Rename.
+	* wp-figurerender.php: Include renamed files.
+
 2007-02-10  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.*.inc.php:
